put geo-centroid behind new operationmode